--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,6 +11,7 @@ body {
   width: 100%;
   padding: 10px;
   font-size: 20px;
+  box-shadow: 0px 1px 2px #666;
 }
 
 #commandbar {
@@ -38,9 +39,11 @@ body {
   min-width: 150px;
   padding: 20px;
   margin: 15px;
-  border: 1px solid #014232;
+  border: 1px solid #789096;
   background-color: #fafafa;
   font-size: 14px;
+  border-radius: 4px;
+  box-shadow: 3px 3px 6px #aaa;
 }
 
 .card-new {
