--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -11,6 +11,7 @@ body {
   padding: 10px;
   font-size: 20px;
   box-shadow: 0px 1px 2px #666;
+  box-sizing: border-box;
 }
 
 #commandbar {
@@ -31,6 +32,24 @@ body {
   width: 95%;
 }
 
+.card-new {
+  margin: 0px auto;
+  display: block;
+  height: 40px;
+  background: #fafafa;
+  width: 10%;
+  border-radius: 3px;
+  padding: 3px;
+  box-shadow: 2px 2px 6px #ccc;
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.card-new:hover {
+  opacity: 0.9;
+  box-shadow: 3px 3px 6px #aaa;
+}
+
 .card {
   display:block;
   width: 95%;
@@ -46,17 +65,6 @@ body {
 
 .card:hover {
   box-shadow: 3px 3px 6px #aaa;
-}
-
-.card-new {
-  font-size: 18px;
-  text-align: center;
-  opacity: 0.5;
-  cursor: pointer;
-}
-
-.card-new:hover {
-  opacity: 0.9;
 }
 
 .card-meta {
