--- a/app/styles/tagsearch.css
+++ b/app/styles/tagsearch.css
@@ -2,6 +2,7 @@
   margin: 10px auto;
   max-width: 615px;
   width: 90%;
+  position: relative;
 }
 
 .tagsearch-container {
@@ -30,13 +31,13 @@
 }
 
 .tagsearch-tag-remove {
-	display: inline-block;
-	height: 15px;
-	width: 15px;
-	margin-left: 5px;
+	height: 14px;
+  width: 14px;
+	margin-left: 1px;
+  padding-bottom: 2px;
+  vertical-align: middle;
 	cursor: pointer;
-	border: 1px solid #abc;
-	border-radius: 10px;
+  fill: #67aed1;
 }
 
 .tagsearch-input {
@@ -46,7 +47,7 @@
 	font-size: 13px;
 	outline: none;
 	background-color: transparent;
-	padding: 1px 2px
+	padding: 5px 2px;
 	margin: 2px 3px 2px 0;
 	border-radius: 5px;
 }
@@ -57,15 +58,17 @@
   border-radius: 4px;
   border: 1px solid #999;
   display: inline-block;
-  margin: 1px 7px;
   font-size: 13px;
-  opacity: 0.8;
+  width: 100%;
+  z-index: 10;
+  box-sizing: border-box;
 }
 
 .tagsearch-suggestion {
   display: block;
   list-style-type: none;
   padding: 2px 25px 2px 5px;
+  cursor: pointer;
 }
 
 .tagsearch-selected-suggestion {
