--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,15 +26,29 @@ body {
   line-height: 1.4;
 }
 
-#header {
+header {
   background-color: #256F5C;
   color: #D3DBD9;
   width: 100%;
-  padding: 10px;
+  padding: 0.3em;
   font-size: 1.4em;
   font-weight: bold;
   box-shadow: 0px 1px 2px #666;
   box-sizing: border-box;
+}
+
+footer {
+  position: fixed;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  bottom: 0;
+  font-size: 0.7em;
+  text-align: right;
+  background-color: #FFFFFF;
+  border-top: 1px solid #333333;
+  padding: 0.3em 0.8em;
+  width: 100%;
 }
 
 #commandbar {
